--- a/LegoArena/LegoArena.MainWindow/Resources.resx
+++ b/LegoArena/LegoArena.MainWindow/Resources.resx
@@ -121,4 +121,13 @@
   <data name="Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ButtonBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\ButtonBackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TitleBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TitleBackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="YellowBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\YellowBackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
